{
  "version": 4,
  "terraform_version": "0.14.2",
  "serial": 63,
  "lineage": "e2801595-de1b-9179-6933-0ea77d6e50fe",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:009883649233:network-acl/acl-08ea77916cee78740",
            "default_network_acl_id": "acl-08ea77916cee78740",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 102,
                "to_port": 0
              }
            ],
            "id": "acl-08ea77916cee78740",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 101,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 22,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 22
              }
            ],
            "owner_id": "009883649233",
            "subnet_ids": [
              "subnet-09e886954034306e4"
            ],
            "tags": {
              "Name": "calvin-test_default_nacl"
            },
            "vpc_id": "vpc-08a36d4dd9ee5e8eb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "r",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "default_route_table_id": "rtb-0c7634a2773ff9b56",
            "id": "rtb-0c7634a2773ff9b56",
            "owner_id": "009883649233",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fafb6d1adeefdab4",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "calvin-test_default_route_table"
            },
            "vpc_id": "vpc-08a36d4dd9ee5e8eb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:009883649233:security-group/sg-0e4b37494565cd0cc",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e4b37494565cd0cc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH into VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "default",
            "owner_id": "009883649233",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "calvin-test_default_sg"
            },
            "vpc_id": "vpc-08a36d4dd9ee5e8eb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev_work",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03ec30676c9b0af01",
            "arn": "arn:aws:ec2:ca-central-1:009883649233:instance/i-023eea5933a2caae9",
            "associate_public_ip_address": true,
            "availability_zone": "ca-central-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-023eea5933a2caae9",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "dev_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-0e24aa0fe5224aa74"
              }
            ],
            "primary_network_interface_id": "eni-0e24aa0fe5224aa74",
            "private_dns": "ip-10-0-158-56.ca-central-1.compute.internal",
            "private_ip": "10.0.158.56",
            "public_dns": "ec2-35-183-104-144.ca-central-1.compute.amazonaws.com",
            "public_ip": "35.183.104.144",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 300,
                "kms_key_id": "arn:aws:kms:ca-central-1:009883649233:key/ee0d685c-bacf-49d3-9403-3a4bef332843",
                "throughput": 0,
                "volume_id": "vol-04bb05f1358308749",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09e886954034306e4",
            "tags": {
              "Name": "calvin-test_instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0e4b37494565cd0cc"
            ]
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_key_pair.ssh_key",
            "aws_network_interface.ni",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:009883649233:internet-gateway/igw-0fafb6d1adeefdab4",
            "id": "igw-0fafb6d1adeefdab4",
            "owner_id": "009883649233",
            "tags": {
              "Name": "calvin-test_internet_gateway"
            },
            "vpc_id": "vpc-08a36d4dd9ee5e8eb"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "ni",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "attachment": [
              {
                "attachment_id": "eni-attach-0bcb012d7e26a10da",
                "device_index": 0,
                "instance": "i-0bfd734d9235f26ec"
              }
            ],
            "id": "eni-0e24aa0fe5224aa74",
            "ipv6_address_count": 0,
            "mac_address": "06:84:c9:98:04:98",
            "private_dns_name": "ip-10-0-158-56.ca-central-1.compute.internal",
            "private_ip": "10.0.158.56",
            "private_ips": [
              "10.0.158.56"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0e4b37494565cd0cc"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09e886954034306e4",
            "tags": {
              "Name": "calvin-test_network_interface"
            }
          },
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04d02633e5880efae",
            "route_table_id": "rtb-0c7634a2773ff9b56",
            "subnet_id": "subnet-09e886954034306e4"
          },
          "dependencies": [
            "aws_default_route_table.r",
            "aws_internet_gateway.gw",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:009883649233:subnet/subnet-09e886954034306e4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "10.0.0.0/16",
            "id": "subnet-09e886954034306e4",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "009883649233",
            "tags": {
              "Name": "calvin-test_public_subnet"
            },
            "tags_all": {
              "Name": "calvin-test_public_subnet"
            },
            "vpc_id": "vpc-08a36d4dd9ee5e8eb"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:009883649233:vpc/vpc-08a36d4dd9ee5e8eb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08ea77916cee78740",
            "default_route_table_id": "rtb-0c7634a2773ff9b56",
            "default_security_group_id": "sg-0e4b37494565cd0cc",
            "dhcp_options_id": "dopt-60a08c08",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-08a36d4dd9ee5e8eb",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0c7634a2773ff9b56",
            "owner_id": "009883649233",
            "tags": {
              "Name": "calvin-test_vpc"
            },
            "tags_all": {
              "Name": "calvin-test_vpc"
            }
          }
        }
      ]
    }
  ]
}